# website

./: .gitignore  404.html  LIGHTNING.md  OSSHARE.md  README.md  SECURITY.md  deploy.sh  index.html  manage.py  pip.sh  pyproject.toml  requirements.txt  scrape-jobs.py  start_with_db.sh
.github/: render.yaml
.github/workflows/: django-test.yml  render.yaml
agents/: builtinnyc.com.agent.py
pingojo/: settings.py  urls.py  wsgi.py
website/: TODO.md  admin.py  admin_actions.py  apps.py  find_company_website.py  forms.py  middleware.py  models.py  parse_job_post.py  parse_resume.py  serializers.py  settings.py  signals.py  tests.py  urls.py  utilities.py  utils.py  views.py  wsgi.py
website/migrations/: 0001_initial.py  0002_skill.py  0003_auto_20230318_0602.py  0004_auto_20230318_0613.py  0005_auto_20230318_0712.py  0006_auto_20230319_0441.py  0007_auto_20230319_0705.py  0008_auto_20230320_0012.py  0009_search.py  0010_auto_20230321_2336.py  0011_auto_20230321_2353.py  0012_source.py  0013_auto_20230324_1917.py  0014_auto_20230324_1925.py  0015_rename_email_id_email_gmail_id.py  0016_auto_20230324_2005.py  0017_alter_email_date.py  0018_auto_20230328_0029.py  0019_auto_20230329_1630.py  0020_auto_20230402_1519.py  0021_skill_company.py  0022_auto_20230404_0023.py  0023_job_link_status_code.py  0024_auto_20230610_2325.py  0025_company_email.py  0026_company_screenshot.py  0027_job_location.py  0028_source_created_source_modified.py  0029_source_search_url.py  0030_source_google_result_count.py  0031_job_added_by.py  0032_company_phone_job_remote.py  0033_job_search_vector_job_website_job_search__0dd667_gin.py  0034_alter_job_search_vector.py  0035_prompt.py  0036_prompt_created_prompt_modified.py  0037_bouncedemail.py  0038_link_profile.py  0039_profile_bio.py  0040_profile_is_public.py  (+12 more)
website/static/css/: base.css  (+4 more)
website/templates/: 404.html  500.html  add_job.html  base.html  company_detail.html  company_list.html  create_job.html  dashboard.html  display_resume.html  donate.html  email.html  home.html  index.html  job_add.html  job_detail.html  job_list.html  job_list_grid.html  job_list_table.html  job_sites.html  merge_companies.html  model_counts.html  pricing.html  privacy_policy.html  resume_clicks.html  search.html  sidebar.html  sources.html  terms_of_service.html
(+52 files in other folders)
