[tool.poetry]
name = "pingojo"
version = "0.1.0"
description = ""
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.7"
gunicorn = "^20.1.0"
django-503 = "^0.1"
django-allauth = "^0.52.0"
django-hashid-field = "^3.3.7"
beautifulsoup4 = "^4.11.2"
dj-database-url = "^1.2.0"
psycopg2 = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
